HSTTWO-2585 Reduced the memory used by the HST model by optimizing sparse or empty Collections and caching more Strings in StringPool.